notebook: propagate the bg color for viewports inside notebooks
The notebook doesn't use the standard bg color, so if there's a viewport
in a notebook page, propagate the different background to it.

https://bugzilla.gnome.org/show_bug.cgi?id=655635

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -471,6 +471,10 @@ GtkScrolledWindow.frame {
     -GtkNotebook-tab-curvature: 6;
 }
 
+.notebook GtkViewport {
+    background-color: @theme_base_color;
+}
+
 .notebook tab {
     padding: 3;
     background-image: -gtk-gradient (linear,
