--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -50,6 +50,10 @@ GtkWindow {
     color: @theme_fg_color;
 }
 
+GtkWindow:window-unfocused {
+    background-color: @theme_unfocused_bg_color;
+}
+
 * {
     background-color: @theme_bg_color;
 }
@@ -786,6 +790,10 @@ GtkTreeMenu .menuitem * {
     -GtkMenuBar-internal-padding: 0;
 }
 
+.menubar:window-unfocused {
+    background-color: @theme_unfocused_bg_color;
+}
+
 .menubar .menuitem {
     border-width: 0;
     border-style: none;
@@ -929,6 +937,10 @@ GtkTreeMenu .menuitem * {
     padding: 4;
 }
 
+.toolbar:window-unfocused {
+    background-color: @theme_unfocused_bg_color;
+}
+
 .toolbar .button {
     padding: 2;
 }
@@ -976,6 +988,12 @@ GtkTreeMenu .menuitem * {
 
     -GtkWidget-window-dragging: true;
     -GtkToolbar-button-relief: normal;
+}
+
+.primary-toolbar .toolbar:window-unfocused,
+.primary-toolbar.toolbar:window-unfocused {
+    background-image: none;
+    background-color: @theme_unfocused_bg_color;
 }
 
 .primary-toolbar .toolbar:insensitive,
