--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -132,7 +132,7 @@
 @define-color primary_toolbar_entry_bg @theme_base_color;
 @define-color primary_toolbar_entry_fg @theme_text_color;
 
-@define-color treeview_focus_border @progressbar_border;
+@define-color treeview_focus_border @switch_slider_active_border;
 
 @define-color expander_row_selected_color #acccee;
 
