--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -134,6 +134,9 @@
 
 @define-color expander_row_selected_color #acccee;
 
+@define-color inset_light_color alpha(white, 0.45);
+@define-color inset_dark_color alpha(black, 0.10);
+
 @define-color wm_highlight #ffffff;
 @define-color wm_title_highlight #ffffff;
 
@@ -154,6 +157,8 @@
 @define-color wm_button_bg_active_b shade (@bg_color, 0.9);
 @define-color wm_button_bg_active_c shade (@bg_color, 0.9);
 
-@import url("gtk-widgets.css");
+@import url("gtk-widgets-backgrounds.css");
+@import url("gtk-widgets-borders.css");
 @import url("gtk-widgets-assets.css");
 @import url("gnome-applications.css");
+@import url("gtk-widgets.css"); /* I want this file to be the last to ovverride things */
