--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1620,7 +1620,8 @@ GtkCalendar.highlight {
     color: @error_fg_color;
 }
 
-.dim-label {
+.dim-label,
+.dim-label:prelight {
     color: mix (@theme_fg_color, @theme_bg_color, 0.50);
 }
 
