--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -133,6 +133,15 @@ NautilusWindow > GtkGrid > .pane-separator {
     border-color: shade (@theme_bg_color, 0.66);
 }
 
+NautilusWindow > GtkGrid > .pane-separator,
+NautilusWindow > GtkGrid > .pane-separator:hover {
+    border-width: 1 1 0 0;
+    border-style: solid;
+    border-color: shade (@theme_bg_color, 0.66);
+    background-color: shade (@theme_bg_color, 1.02);
+    color: shade (@theme_bg_color, 0.9);
+}
+
 /* gnome-documents */
 .documents-dropdown,
 .documents-dropdown .view {
