--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -7,6 +7,8 @@
 @define-color fg_color #2e3436;
 @define-color tooltip_fg_color #ffffff;
 @define-color selected_fg_color #ffffff;
+/*@define-color unfocused_bg_color #f8f8f8;*/
+@define-color unfocused_bg_color @bg_color;
 
 /* Colormap actually used by the theme, to be overridden in other css files */
 @define-color theme_base_color @base_color;
