--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -7,7 +7,9 @@ GtkComboBox.combobox-entry .button,
 GtkComboBox.combobox-entry .button:focus,
 .button:active,
 .button:active:hover,
-.button:insensitive {
+.button:insensitive,
+GtkSwitch.trough,
+GtkSwitch.trough:insensitive {
     border-image: url("borders/generic-border.svg") 3 3 4 3 / 3 3 4 3 stretch;
     border-radius: 3;
     border-width: 1 1 2 1;
@@ -17,7 +19,8 @@ GtkComboBox.combobox-entry .button:focus,
 .entry:focus,
 GtkComboBox.combobox-entry .entry:focus,
 .button:focus:active,
-.button.default:active { 
+.button.default:active,
+GtkSwitch.trough:active { 
     border-image: url("borders/generic-border-focused.svg") 3 3 4 3 / 3 3 4 3 stretch;
     border-radius: 3;
     border-width: 1 1 2 1;
@@ -110,7 +113,7 @@ GtkComboBox.combobox-entry .entry:focus,
 }
 
 GtkScale.trough,
-GtkSwitch.trough,
+/*GtkSwitch.trough,*/
 GtkScale.trough.horizontal {
     border-image: url("assets/trough-border-horizontal.svg") 2 / 2 stretch;
 }
@@ -119,7 +122,7 @@ GtkScale.trough.vertical {
     border-image: url("assets/trough-border-vertical.svg") 2 / 2 stretch;
 }
 
-GtkSwitch.trough:active,
+/*GtkSwitch.trough:active,*/
 GtkScale.progressbar.horizontal {
     border-image: url("assets/trough-active-border-horizontal.svg") 2 / 2 stretch;
 }
@@ -128,13 +131,13 @@ GtkScale.progressbar.vertical {
     border-image: url("assets/trough-active-border-vertical.svg") 2 / 2 stretch;
 }
 
-GtkSwitch.slider {
+/*GtkSwitch.slider {
     border-image: url("assets/switch-slider-border.svg") 2 / 2 stretch;
 }
 
 GtkSwitch.slider:active {
     border-image: url("assets/switch-slider-active-border.svg") 2 / 2 stretch;
-}
+}*/
 
 .progressbar,
 .entry.progressbar,
@@ -160,7 +163,9 @@ GtkComboBox.combobox-entry .button:window-unfocused,
 .button:active:hover:window-unfocused,
 .button:insensitive:window-unfocused,
 .primary-toolbar .raised .button:window-unfocused,
-GtkComboBox:window-unfocused {
+GtkComboBox .button:window-unfocused,
+GtkSwitch.through:window-unfocused,
+GtkSwitch.through:active:window-unfocused {
     border-image: none;
     border-width: 1;
     border-style: solid;
