--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -252,62 +252,44 @@ GtkTreeView .separator,
     background-image: -gtk-gradient (linear,
                                      left top, left bottom,
                                      from (@progressbar_background_a),
-                                     to (@progressbar_background_b));
+                                     color-stop (0.75, @progressbar_background_b),
+                                     to (shade(@progressbar_background_a, 0.85)));
 
     border-radius: 3;
     border-width: 1;
-    border-style: none;
-    /* border-image defined in the -assets variant */
+    border-style: solid;
+    border-color: @progressbar_border;
+    box-shadow: 1 1 alpha(white, 0.2) inset, -1 -1 alpha(white, 0.1) inset;
 
     -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                  left top, right bottom,
                                                  from (alpha (@progressbar_pattern, 0.00)),
                                                  color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
-                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.10)),
-                                                 to (alpha (@progressbar_pattern, 0.10)));
+                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.25)),
+                                                 to (alpha (@progressbar_pattern, 0.25)));
 }
 
 .progressbar.vertical {
     background-image: -gtk-gradient (linear,
                                      left top, right top,
                                      from (@progressbar_background_a),
-                                     to (@progressbar_background_b));
+                                     color-stop (0.75, @progressbar_background_b),
+                                     to (shade(@progressbar_background_a, 0.85)));
 
     -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                  left bottom, right top,
                                                  from (alpha (@progressbar_pattern, 0.00)),
                                                  color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
-                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.10)),
-                                                 to (alpha (@progressbar_pattern, 0.10)));
+                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.25)),
+                                                 to (alpha (@progressbar_pattern, 0.25)));
 }
 
 /* through component */
 GtkProgressBar,
 .trough row {
-    padding: 0;
-    -GtkProgressBar-xspacing: 22;
-    -GtkProgressBar-yspacing: 22;
-}
-
-.trough,
-.trough row,
-.trough row:hover {
-    background-image: -gtk-gradient (linear,
-                                     left top, left bottom,
-                                     from (@trough_bg_color_a),
-                                     to (@trough_bg_color_b));
-
-    border-width: 1;
-    border-style: solid;
-    border-radius: 3;
-    border-color: shade (@inactive_frame_color, 0.8);
-}
-
-.trough.vertical {
-    background-image: -gtk-gradient (linear,
-                                     left top, right top,
-                                     from (@trough_bg_color_a),
-                                     to (@trough_bg_color_b));
+    padding: 0 0 1 0;
+    -GtkProgressBar-xspacing: 20;
+    -GtkProgressBar-yspacing: 20;
 }
 
 .trough row:selected,
@@ -876,6 +858,7 @@ GtkComboBox .button *:prelight {
     background-color: shade (@theme_bg_color, 0.882);
     border-width: 0;
     border-radius: 0;
+    border-image: none;
 }
 
 .scrollbar.slider,
