Widget theme: checks and radios refresh, some tweaks to the switch.

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -172,4 +172,4 @@
 @import url("gtk-widgets-assets.css");
 @import url("gnome-applications.css");
 @import url("gtk-widgets.css");
-/* @import url("gtk-widgets-window-unfocused.css"); */
+/* @import url("window-unfocused.css"); */
