--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1100,6 +1100,13 @@ GtkTreeMenu .menuitem * {
     background-color: transparent;
 }
 
+.radio:selected:hover,
+.check:selected:hover,
+.radio:hover,
+.check:hover {
+    background-color: shade (@theme_bg_color, 1.02);
+}
+
 /************
  * Toolbars *
  ************/
@@ -1263,9 +1270,10 @@ GtkSwitch.slider {
     border-width: 1;
     border-radius: 2;
     border-style: solid;
-    border-color: mix (@button_border, @theme_text_color, 0.5);
+    border-color: mix (@button_border, @theme_text_color, 0.4);
 
-    box-shadow: 0 -1 inset alpha(@theme_base_color, 0.50);
+    /*box-shadow: 0 -1 inset alpha(@theme_base_color, 0.50);*/
+    box-shadow: 0 -1 inset alpha(white, 0.9), 0 1 inset @theme_base_color, 0 2 inset alpha(@button_border, 0.15);
 
     padding: 2 2 3 2;
 
